mysql-service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: mysql-wp1
spec:
  ports:
    - port: 3306
  selector:
    app: wordpress1
    tier: mysql1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-wp1
spec:
  selector:
    matchLabels:
      app: wordpress1
      tier: mysql1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wordpress1
        tier: mysql1
    spec:
      containers:
      - image: mysql:latest
        name: mysql1
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: persistent-storage1
          mountPath: /var/lib/mysql1
      volumes:
      - name: persistent-storage1
        persistentVolumeClaim:
          claimName: mysql-pv-claim2
