wordpress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress1
spec:
  ports:
    - port: 80
  selector:
    app: wordpress1
    tier: web1
  type: LoadBalancer
 
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress1
spec:
  selector:
    matchLabels:
      app: wordpress1
      tier: web1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wordpress1
        tier: web1
    spec:
      containers:
      - image: wordpress:php8.1-apache
        name: wordpress1
        ports:
        - containerPort: 80
          name: wordpress1
        volumeMounts:
        - name: persistent-storage2
          mountPath: /var/www1/html
      volumes:
      - name: persistent-storage2
        persistentVolumeClaim:
          claimName: wordpress-pv-claim2
